// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test basic properties of all configurations should match the snapshot 1`] = `
Object {
  "extends": "airbnb-base",
  "rules": Object {
    "indent": Array [
      "error",
      4,
      Object {
        "SwitchCase": 1,
      },
    ],
    "max-len": Array [
      "error",
      120,
      2,
      Object {
        "ignoreComments": false,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
  },
}
`;

exports[`test basic properties of all configurations should match the snapshot 2`] = `
Object {
  "extends": "airbnb",
  "plugins": Array [
    "react",
  ],
  "rules": Object {
    "import/no-extraneous-dependencies": Array [
      2,
      Object {
        "devDependencies": true,
      },
    ],
    "import/no-unresolved": Array [
      2,
      Object {
        "amd": true,
        "commonjs": true,
      },
    ],
    "indent": Array [
      "error",
      4,
      Object {
        "SwitchCase": 1,
      },
    ],
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "specialLink": Array [
          "to",
        ],
      },
    ],
    "jsx-a11y/href-no-hash": "off",
    "jsx-a11y/label-has-for": Array [
      "error",
      Object {
        "allowChildren": true,
      },
    ],
    "max-len": Array [
      "error",
      120,
      2,
      Object {
        "ignoreComments": false,
        "ignoreRegExpLiterals": true,
        "ignoreStrings": true,
        "ignoreTemplateLiterals": true,
        "ignoreUrls": true,
      },
    ],
    "react/jsx-filename-extension": "off",
    "react/jsx-indent": Array [
      "error",
      4,
    ],
    "react/jsx-indent-props": Array [
      "error",
      4,
    ],
  },
}
`;
